--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>socoro</h1>
+    <h1>
+        Login
+    </h1>
+    <input type="text" placeholder="Nome">
+    <br><br>
+    <input type="password" placeholder="Senha">
+    <br><br>
+    <button> Enviar </button>
 </body>
 </html>
